# shop_django

./: pyproject.toml
shop/: db.sqlite3
shop/main_shop/: admin.py  models.py
shop/main_shop/migrations/: 0001_initial.py  0002_cheesecake.py
shop/shop/: settings.py  urls.py
shop_venv/: pyproject.toml
shop_venv/tests/: test_shop_venv.py
