[tool.poetry]
name = "shop_venv"
version = "0.1.0"
description = ""
authors = ["LaKyXa <lakyxamersh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
luigi = "^3.0.3"
Django = "^3.2.8"
admin = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
